Initial commit for changes for Java OpenNode2 v2.08 Updates: Removed remaining DB2 artifacts (no longer maintained) Updated Oracle JDBC Driver Updated Spring libraries to 3.2.2.RELEASE version Fixed several enum matching issues Updated multiple dependency library versions to newer versions Fixed FacId3 build Added direct link to last run Activity's Transaction details page from the Schedule page Removed the dummy Transaction network id, added functionality to create it when it's actually needed (functionality was being punted on Solicits, for example) Added more encapsulated functionality for tracking and saving Activity objects Activity object now loads its child Transaction during a load Removed some commons-lang stuff that had crept back in (in favor of commons-lang3, old jar still exists as a runtime Velocity dependency) Added enum for endpoint 2.1 (or rather deprecated the old 2.0 one) Added contextual help on the Edit Schedule page for each Schedule Param field (currently based on the FCD) Added REST endpoint "wnrest" Added ENREST as a enum value for EndpointVersionType Added "NEVER" as a enum value for ScheduleFrequency, this is the default value Added Template types to avoid raw type operations in classes which were already receiving work Fixed a lot of base classes that were already being edited, including specifying Java generic return types that fixes risky class casting Rolled back some of the FacId3 improvements temporarily as the improvements still have unresolved issues Fixed 2 defects in the FacId3 plugin that I discovered while testing other functionality Removed a sun.misc class (as they should never be referenced directly) for base64 decoding in favor of an Apache commons-codec class that does the same Replaced config connection auto complete for JDBC Driver class names with a drop down (the auto complete frequently broke and added no value) Plugins now know what version they are, version is displayed in Node Admin Plugin Processor (aka Exchange S